--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,14 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.0.0'
-    implementation 'com.android.support:recyclerview-v7:26.0.0'
-    implementation 'com.android.support:design:26.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.ibm.watson.developer_cloud:conversation:4.2.1'
@@ -40,7 +41,16 @@ dependencies {
     implementation 'com.ibm.watson.developer_cloud:android-sdk:0.4.3'
     implementation 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.1.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.gms:play-services:10.0.1'
-    implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
+apply plugin: 'com.google.gms.google-services'
