--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.ibm.watson.developer_cloud:conversation:4.2.1'
     implementation 'com.ibm.watson.developer_cloud:text-to-speech:4.2.1'
@@ -48,6 +50,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.github.lguipeng:BubbleView:1.0.1'
+    implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:multidex:1.0.3'
