--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ allprojects {
     repositories {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
+
         jcenter()
         google()
     }
