--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -35,6 +36,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.volley:volley:1.0.0'
 
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.ibm.watson.developer_cloud:conversation:4.2.1'
@@ -52,6 +54,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.github.lguipeng:BubbleView:1.0.1'
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
