--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vmac.WatBot"
-    >
+    package="com.example.vmac.WatBot">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,26 +15,21 @@
         android:icon="@mipmap/ic_face"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
-
-        >
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".Activities.LoginActivity" />
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".SplashActivity">
-
-
-        </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".Splach2Activity"
+            android:name=".Activities.Splach2Activity"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".Activities.PrincipalActivity" >
+
         </activity>
     </application>
 
