--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.ibm.watson.developer_cloud:android-sdk:0.4.3'
     implementation 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.1.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.roughike:bottom-bar:2.3.1'
+
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.android.support:design:26.1.0'
@@ -59,6 +61,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
