--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".SplashActivity" />
         <activity android:name=".Activities.LoginActivity" />
         <activity
             android:name=".Activities.Splach2Activity"
@@ -26,11 +26,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Activities.PrincipalActivity" >
-
-        </activity>
+        <activity android:name=".Activities.PrincipalActivity"></activity>
+        <activity android:name=".Activities.DetallesPfr"></activity>
     </application>
 
 </manifest>
